@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	7.141 (gritter) 10/23/06";
+	"@(#)/usr/ucb/otfdump.sl	7.142 (gritter) 10/24/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  7.141 (gritter) 10/23/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 7.141 (gritter) 10/23/06";
+static const char sccsid[] USED = "@(#)dpost.sl  7.142 (gritter) 10/24/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 7.142 (gritter) 10/24/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.141 (gritter) 10/23/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.142 (gritter) 10/24/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.141 (gritter) 10/23/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.142 (gritter) 10/24/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "7.141";
+const char revision[] = "7.142";
 /* SLIST */
 /*
 ext.h: * Sccsid @(#)ext.h	1.96 (gritter) 10/21/06
@@ -45,8 +45,8 @@ troff.d/makedev.c: * Sccsid @(#)makedev.c	1.16 (gritter) 9/22/06
 troff.d/otf.c: * Sccsid @(#)otf.c	1.59 (gritter) 10/5/06
 troff.d/otfdump.c: * Sccsid @(#)otfdump.c	1.15 (gritter) 3/16/06
 troff.d/pt.h: * Sccsid @(#)pt.h	1.53 (gritter) 9/11/06
-troff.d/t10.c: * Sccsid @(#)t10.c	1.95 (gritter) 10/5/06
-troff.d/t6.c: * Sccsid @(#)t6.c	1.185 (gritter) 10/13/06
+troff.d/t10.c: * Sccsid @(#)t10.c	1.96 (gritter) 10/24/06
+troff.d/t6.c: * Sccsid @(#)t6.c	1.186 (gritter) 10/24/06
 troff.d/troff.h: * Sccsid @(#)troff.h	1.26 (gritter) 8/12/06
 troff.d/unimap.c: * Sccsid @(#)unimap.c	1.13 (gritter) 2/16/06
 troff.d/unimap.h: * Sccsid @(#)unimap.h	1.2 (gritter) 12/22/05
